tests/paczka1/fuzzy1/55661248.err
Error in line 3: 6HBXFRsocu A863 52,2
Error in line 13: A71 A71 56,7
Error in line 25: dO2aroEb A863 242,9
Error in line 27: sWgLEbiI S614 77,6
